--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "npm": "^6.0.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "swagger-tools": "^0.10.3"
   }
 }
