--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node app.js"
   },
   "engines": {
-    "node": "^8.11.2"
+    "node": "^8.11.2",
+    "npm": "^6.1.0"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
