--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "engines": {
     "node": "^8.11.2",
-    "npm": "^6.1.0"
+    "npm": "latest"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
